@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.2.1-beta2
-DOS2UNIX_VERSION_SHORT = 521b2
-DOS2UNIX_DATE = 2011-02-22
+DOS2UNIX_VERSION = 5.2.1-beta3
+DOS2UNIX_VERSION_SHORT = 521b3
+DOS2UNIX_DATE = 2011-02-26
